[package]
name = "huahuacoin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "socket-access-verifier",
]

[dependencies]
local_ipaddress = "0.1.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
sha2 = "0.10.7"
toml = "0.7.5"
